// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initially renders a loading screen 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#0000af",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "white",
        "fontSize": 24,
      }
    }
  >
    Loading...
  </Text>
</View>
`;

exports[`renders a list of seasons after the seasons have been received 1`] = `
<RCTScrollView
  automaticallyAdjustContentInsets={false}
  dataSource={
    ListViewDataSource {
      "items": 5,
    }
  }
  renderRow={[Function]}
  renderScrollComponent={[Function]}
  style={
    Object {
      "backgroundColor": "#0000af",
      "paddingTop": 70,
    }
  }
>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      onPress={[Function]}
      style={
        Object {
          "color": "white",
          "fontSize": 20,
          "marginBottom": 8,
          "textAlign": "center",
        }
      }
    >
      Season 33
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      onPress={[Function]}
      style={
        Object {
          "color": "white",
          "fontSize": 20,
          "marginBottom": 8,
          "textAlign": "center",
        }
      }
    >
      Season 32
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      onPress={[Function]}
      style={
        Object {
          "color": "white",
          "fontSize": 20,
          "marginBottom": 8,
          "textAlign": "center",
        }
      }
    >
      Season 31
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      onPress={[Function]}
      style={
        Object {
          "color": "white",
          "fontSize": 20,
          "marginBottom": 8,
          "textAlign": "center",
        }
      }
    >
      Season 30
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      onPress={[Function]}
      style={
        Object {
          "color": "white",
          "fontSize": 20,
          "marginBottom": 8,
          "textAlign": "center",
        }
      }
    >
      Season 29
    </Text>
  </View>
</RCTScrollView>
`;
